@@ -212,6 +212,12 @@ class AdderAtlasPlugin (AdderPluginBase):
                             zipFiles[zipFileName] = dict()
                         contZipMap[file.lfn] = zipFileName
                 try:
+                    # check nevents
+                    if file.type == 'output' and not isZipFile and not self.addToTopOnly and self.job.prodSourceLabel in ['managed']:
+                        if file.lfn not in self.extraInfo['nevents']:
+                            errMsg = "nevents is missing in jobReport for {0}".format(file.lfn)
+                            self.logger.error(errMsg)
+                            #raise ValueError, errMsg
                     # fsize
                     fsize = None
                     if not file.fsize in ['NULL','',0]:
