@@ -2,6 +2,7 @@ Release Notes
 
 * 5/8/2017
   * added nSimEvents
+  * changed managed to fail when nevents is not set
 
 * 5/3/2017
   * fixed eventStatus=merged for objStore_ID=None
